--- a/4338_Khalilov/MainWindow.xaml
+++ b/4338_Khalilov/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid x:Name="Grid">
         <TextBox x:Name="txtName" HorizontalAlignment="Center" Margin="0,158,0,0" TextWrapping="Wrap" Text="Введите имя" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btnShow" Content="Показать информацию" HorizontalAlignment="Left" Margin="340,99,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnShow" Content="Показать информацию" HorizontalAlignment="Left" Margin="340,99,0,0" VerticalAlignment="Top" Click="btnShow_Click"/>
 
     </Grid>
 </Window>
